# Bezel

./: .gitignore  .gitmodules  Bezel.sln  CMakeLists.txt  CMakeSettings.json  CPP.HINT  Init.bat  LICENSE  README.md  premake5.lua  sandbox.cpp
Bezel/: Bezel.aps  Bezel.vcxproj  Bezel.vcxproj.filters  resource.h
Bezel/src/: Bezel.h
Bezel/src/Bezel/: App.cpp  App.h  Core.h  EntryPoint.h  Log.cpp  Log.h
EarthEscape/: earthescape.cpp
EarthEscape/include/: Color.h  Level.h  ParticleSystem.h  Player.h  Random.h
EarthEscape/include/layers/: GameLayer.h
EarthEscape/src/: GameLayer.cpp  Level.cpp  ParticleSystem.cpp  Player.cpp  Random.cpp
Sandbox/: Sandbox.vcxproj  sandbox.cpp
Sandbox/include/layers/: Sandbox2D.h
Sandbox/src/: Sandbox2D.cpp  SandboxApp.cpp
assets/shaders/: Texture.glsl
include/: Sandbox2D.h
include/layers/: ExampleLayer.h
src/: ExampleLayer.cpp  Sandbox2D.cpp
